--- a/src/main/resources/View/dashboard.fxml
+++ b/src/main/resources/View/dashboard.fxml
@@ -187,6 +187,7 @@
                      </center>
                   </BorderPane>
                   <Line endX="474.583984375" endY="339.4215393066406" layoutX="136.0" layoutY="18.0" rotate="90.0" startX="-144.63694763183594" startY="338.9727783203125" styleClass="line" />
+                  <Pane fx:id="homeMainView" styleClass="casualPane"  layoutX="330.0" layoutY="50.0" prefHeight="600.0" prefWidth="1000.0" />
                </children>
                <StackPane.margin>
                   <Insets />
