change database and EWBill function

--- a/src/main/resources/View/loginForm.fxml
+++ b/src/main/resources/View/loginForm.fxml
@@ -102,7 +102,7 @@
                   </Label>
                   <BorderPane prefHeight="150.0" prefWidth="200.0">
                      <center>
-                        <Button fx:id="loginBtn" mnemonicParsing="false" onMouseClicked="#mouseClick" onMouseEntered="#mouseEnter" onMouseExited="#mouseExit" styleClass="button" text="Đăng nhập" BorderPane.alignment="CENTER">
+                        <Button fx:id="loginBtn" mnemonicParsing="false" onMouseClicked="#mouseClick" onMouseEntered="#mouseEnter" onMouseExited="#mouseExit" styleClass="appBtn" text="Đăng nhập" BorderPane.alignment="CENTER">
                            <font>
                               <Font name="Segoe UI" size="22.0" />
                            </font>
