--- a/src/main/resources/View/studentPane.fxml
+++ b/src/main/resources/View/studentPane.fxml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
+<?import java.net.URL?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.StudentPaneController">
+<AnchorPane fx:id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.StudentPaneController">
     <stylesheets>
-        <URL value="@/styles/main.css"/>
+        <URL value="@/styles/main.css" />
     </stylesheets>
-    <children>
-      <BorderPane layoutX="100.0" layoutY="47.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <center>
-            <Label text="student" BorderPane.alignment="CENTER">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-         </center>
-      </BorderPane>
+   <children>
+      <TableView fx:id="studentsTable" layoutX="58.0" layoutY="114.0" prefHeight="461.0" prefWidth="885.0">
+        <columns>
+          <TableColumn fx:id="idCol" maxWidth="80.0" text="ID" />
+          <TableColumn fx:id="nameCol" maxWidth="148.0" prefWidth="148.0" text="Họ tên" />
+          <TableColumn fx:id="birthCol" maxWidth="112.0" prefWidth="112.0" text="Sinh nhật" />
+          <TableColumn fx:id="genderCol" maxWidth="100.0" minWidth="0.0" prefWidth="100.0" text="Giới tính" />
+          <TableColumn fx:id="idCardCol" maxWidth="84.0" prefWidth="84.0" text="ID thẻ" />
+          <TableColumn fx:id="phoneNumCol" maxWidth="120.0" prefWidth="120.0" text="Sdt" />
+          <TableColumn fx:id="universityCol" maxWidth="160.0" prefWidth="160.0" text="Trường" />
+          <TableColumn fx:id="gradeCol" maxWidth="80.0" text="Lớp" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
