--- a/src/main/resources/View/ewBillPane.fxml
+++ b/src/main/resources/View/ewBillPane.fxml
@@ -6,8 +6,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -16,7 +14,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import se.alipsa.*?>
 
 <AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.EwBillPaneController">
     <stylesheets>
@@ -30,12 +27,12 @@
                   <HBox fx:id="box" prefHeight="45.0" prefWidth="1000.0">
                      <children>
                         <ComboBox fx:id="apartmentComboBox" onAction="#selectHandle" prefHeight="45.0" prefWidth="200.0" styleClass="combobox" />
-                        <TextField prefHeight="45.0" prefWidth="450.0" promptText="Tìm kiếm theo số phòng" styleClass="searchField">
+                        <TextField fx:id="searchText" onKeyReleased="#textChange" prefHeight="45.0" prefWidth="450.0" promptText="Tìm kiếm theo ID hoặc số phòng" styleClass="searchField">
                            <HBox.margin>
                               <Insets left="35.0" right="35.0" />
                            </HBox.margin>
                         </TextField> 
-                        <Button styleClass="buttonindashboard" mnemonicParsing="false" text="Thêm">
+                        <Button mnemonicParsing="false" styleClass="buttonindashboard" text="Thêm">
                            <HBox.margin>
                               <Insets left="35.0" />
                            </HBox.margin>
@@ -68,6 +65,17 @@
                               <Insets left="10.0" top="8.0" />
                            </HBox.margin>
                         </CheckBox>
+                        <Button fx:id="showAllBtn" mnemonicParsing="false" onAction="#showAll" styleClass="buttonindashboard" text="Hiển thị tất cả" visible="false">
+                           <HBox.margin>
+                              <Insets left="25.0" top="5.0" />
+                           </HBox.margin>
+                           <padding>
+                              <Insets bottom="5.0" left="30.0" right="30.0" top="5.0" />
+                           </padding>
+                           <font>
+                              <Font name="Segoe UI" size="12.0" />
+                           </font>
+                        </Button>
                      </children>                   
                   </HBox>
                </children>
@@ -93,68 +101,6 @@
                </styleClass>
             </TableView>
          </center>
-         <bottom>
-            <VBox prefWidth="100.0" BorderPane.alignment="CENTER">
-               <children>
-                  <HBox prefWidth="200.0">
-                     <children>
-                        <Label text="Tiền đã thu:">
-                           <font>
-                              <Font name="Segoe UI Bold" size="12.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="10.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="10.0" text="Label">
-                           <HBox.margin>
-                              <Insets left="10.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Label layoutX="20.0" layoutY="10.0" text="Tiền chưa thu:">
-                           <font>
-                              <Font name="Segoe UI Bold" size="12.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="150.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Label layoutX="66.0" layoutY="10.0" text="Label">
-                           <HBox.margin>
-                              <Insets left="10.0" />
-                           </HBox.margin>
-                        </Label>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <HBox prefWidth="200.0">
-                     <children>
-                        <Label text="Tổng:">
-                           <font>
-                              <Font name="Segoe UI Bold" size="12.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="10.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="10.0" text="Label">
-                           <font>
-                              <Font name="Segoe UI" size="12.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="10.0" />
-                           </HBox.margin>
-                        </Label>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </HBox>
-               </children>
-            </VBox>
-         </bottom>
       </BorderPane>
    </children>
 </AnchorPane>
