--- a/src/main/resources/View/studentPane.fxml
+++ b/src/main/resources/View/studentPane.fxml
@@ -1,26 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.StudentPaneController">
     <stylesheets>
         <URL value="@/styles/main.css" />
     </stylesheets>
    <children>
-      <TableView fx:id="studentsTable" layoutX="58.0" layoutY="114.0" prefHeight="461.0" prefWidth="885.0">
-        <columns>
-          <TableColumn fx:id="idCol" maxWidth="80.0" text="ID" />
-          <TableColumn fx:id="nameCol" maxWidth="148.0" prefWidth="148.0" text="Họ tên" />
-          <TableColumn fx:id="birthCol" maxWidth="112.0" prefWidth="112.0" text="Sinh nhật" />
-          <TableColumn fx:id="genderCol" maxWidth="100.0" minWidth="0.0" prefWidth="100.0" text="Giới tính" />
-          <TableColumn fx:id="idCardCol" maxWidth="84.0" prefWidth="84.0" text="ID thẻ" />
-          <TableColumn fx:id="phoneNumCol" maxWidth="120.0" prefWidth="120.0" text="Sdt" />
-          <TableColumn fx:id="universityCol" maxWidth="160.0" prefWidth="160.0" text="Trường" />
-          <TableColumn fx:id="gradeCol" maxWidth="80.0" text="Lớp" />
-        </columns>
-      </TableView>
+      <BorderPane prefHeight="600.0" prefWidth="1000.0">
+         <top>
+            <VBox prefHeight="70.0" prefWidth="1000.0" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox prefHeight="45.0" prefWidth="1000.0">
+                     <children>
+                        <TextField prefHeight="44.0" prefWidth="450.0" promptText="Tìm kiếm">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </TextField>
+                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Thêm Mới">
+                           <padding>
+                              <Insets bottom="8.0" left="40.0" right="40.0" top="8.0" />
+                           </padding>
+                           <HBox.margin>
+                              <Insets left="12.0" top="2.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button layoutX="472.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" text="Xếp phòng thủ công">
+                           <padding>
+                              <Insets bottom="8.0" left="40.0" right="40.0" top="8.0" />
+                           </padding>
+                           <HBox.margin>
+                              <Insets top="2.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button layoutX="622.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" text="Xếp phòng thụ động">
+                           <padding>
+                              <Insets bottom="8.0" left="40.0" right="40.0" top="8.0" />
+                           </padding>
+                           <HBox.margin>
+                              <Insets top="2.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <HBox fx:id="box" prefHeight="25.0" prefWidth="1000.0">
+                     <children>
+                        <CheckBox fx:id="allBox" mnemonicParsing="false" onAction="#checkBoxHandles" text="Tất cả">
+                           <font>
+                              <Font name="Segoe UI" size="12.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="10.0" top="8.0" />
+                           </HBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="doneBox" mnemonicParsing="false" onAction="#checkBoxHandles" text="Đã thu">
+                           <HBox.margin>
+                              <Insets left="10.0" top="8.0" />
+                           </HBox.margin>
+                        </CheckBox>
+                        <CheckBox fx:id="unDoneBox" mnemonicParsing="false" onAction="#checkBoxHandles" text="Chưa thu">
+                           <HBox.margin>
+                              <Insets left="10.0" top="8.0" />
+                           </HBox.margin>
+                        </CheckBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </HBox>
+               </children>
+            </VBox>
+         </top>
+         <center>
+            <TableView fx:id="dataTableView" prefHeight="400.0" prefWidth="1000.0" stylesheets="@../styles/table.css" BorderPane.alignment="CENTER">
+               <columns>
+                  <TableColumn fx:id="idCol" prefWidth="75.0" style="-fx-background-color: transparent; -fx-alignment: center;" styleClass="column" text="ID" />
+                  <TableColumn fx:id="nameCol" prefWidth="75.0" style="-fx-background-color: transparent; -fx-alignment: center;" text="Họ và tên" />
+                  <TableColumn fx:id="genderCol" prefWidth="75.0" style="-fx-background-color: transparent; -fx-alignment: center;" text="Giới tính" />
+                  <TableColumn fx:id="statusCol" prefWidth="75.0" style="-fx-background-color: transparent; -fx-alignment: center;" text="Trạng thái" />
+                  <TableColumn fx:id="universityCol" prefWidth="75.0" style="-fx-background-color: transparent; -fx-alignment: center;" text="Trường" />
+                  <TableColumn fx:id="sYearCol" prefWidth="75.0" style="-fx-background-color: transparent; -fx-alignment: center;" text="Năm NH" />
+                  <TableColumn fx:id="eYearCol" prefWidth="75.0" style="-fx-background-color: transparent; -fx-alignment: center;" text="Năm TN" />
+                  <TableColumn fx:id="toolCol" prefWidth="75.0" style="-fx-background-color: transparent; -fx-alignment: center;" />
+               </columns>
+               <styleClass>
+                  <String fx:value="table" />
+                  <String fx:value="column-header-background" />
+               </styleClass>
+            </TableView>
+         </center>
+         <bottom>
+            <HBox prefHeight="28.0" prefWidth="1000.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label text="Tổng:">
+                     <font>
+                        <Font name="Segoe UI Bold" size="12.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="10.0" top="4.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label text="Label">
+                     <font>
+                        <Font name="Segoe UI" size="12.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="10.0" top="4.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+         </bottom>
+      </BorderPane>
    </children>
 </AnchorPane>
