--- a/src/main/resources/View/roomPane.fxml
+++ b/src/main/resources/View/roomPane.fxml
@@ -28,7 +28,7 @@
                   <HBox fx:id="box" prefHeight="45.0" prefWidth="1000.0">
                      <children>
                         <ComboBox fx:id="apartmentComboBox" onAction="#selectHandle" prefHeight="45.0" prefWidth="200.0" styleClass="combobox" />
-                        <TextField prefHeight="45.0" prefWidth="480.0" promptText="Tìm kiếm theo số phòng" styleClass="searchField">
+                        <TextField fx:id="searchText" onKeyReleased="#textChange" prefHeight="45.0" prefWidth="480.0" promptText="Tìm kiếm theo số phòng" styleClass="searchField">
                            <HBox.margin>
                               <Insets left="35.0" />
                            </HBox.margin>
@@ -66,6 +66,17 @@
                               <Insets left="10.0" top="8.0" />
                            </HBox.margin>
                         </CheckBox>
+                        <Button fx:id="showAllBtn" mnemonicParsing="false" onAction="#showAll" styleClass="buttonindashboard" text="Hiển thị tất cả" visible="false">
+                           <HBox.margin>
+                              <Insets left="25.0" top="5.0" />
+                           </HBox.margin>
+                           <padding>
+                              <Insets bottom="5.0" left="30.0" right="30.0" top="5.0" />
+                           </padding>
+                           <font>
+                              <Font name="Segoe UI" size="12.0" />
+                           </font>
+                        </Button>
                      </children>                   
                   </HBox>
                </children>
