--- a/src/main/resources/View/studentPane.fxml
+++ b/src/main/resources/View/studentPane.fxml
@@ -26,34 +26,43 @@
                <children>
                   <HBox prefHeight="45.0" prefWidth="1000.0">
                      <children>
-                        <TextField prefHeight="44.0" prefWidth="450.0" promptText="Tìm kiếm">
+                        <TextField fx:id="searchText" onKeyReleased="#textChange" prefHeight="44.0" prefWidth="500.0" promptText="Tìm kiếm">
                            <HBox.margin>
                               <Insets />
                            </HBox.margin>
                         </TextField>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Thêm Mới">
+                        <Button mnemonicParsing="false" prefHeight="40.0" styleClass="appBtn" text="Thêm Mới" textFill="WHITE">
                            <padding>
-                              <Insets bottom="8.0" left="40.0" right="40.0" top="8.0" />
+                              <Insets bottom="8.0" left="24.0" right="24.0" top="8.0" />
                            </padding>
                            <HBox.margin>
                               <Insets left="12.0" top="2.0" />
                            </HBox.margin>
+                           <font>
+                              <Font size="14.0" />
+                           </font>
                         </Button>
-                        <Button layoutX="472.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" text="Xếp phòng thủ công">
+                        <Button layoutX="472.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" styleClass="appBtn-red" text="Xếp phòng thủ công" textFill="WHITE">
                            <padding>
-                              <Insets bottom="8.0" left="40.0" right="40.0" top="8.0" />
+                              <Insets bottom="8.0" left="24.0" right="24.0" top="8.0" />
                            </padding>
                            <HBox.margin>
-                              <Insets top="2.0" />
+                              <Insets left="12.0" top="2.0" />
                            </HBox.margin>
+                           <font>
+                              <Font size="14.0" />
+                           </font>
                         </Button>
-                        <Button layoutX="622.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" text="Xếp phòng thụ động">
+                        <Button layoutX="622.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" styleClass="appBtn-green" text="Xếp phòng thụ động" textFill="WHITE">
                            <padding>
-                              <Insets bottom="8.0" left="40.0" right="40.0" top="8.0" />
+                              <Insets bottom="8.0" left="24.0" right="24.0" top="8.0" />
                            </padding>
                            <HBox.margin>
-                              <Insets top="2.0" />
+                              <Insets left="12.0" top="2.0" />
                            </HBox.margin>
+                           <font>
+                              <Font size="14.0" />
+                           </font>
                         </Button>
                      </children>
                   </HBox>
@@ -67,16 +76,27 @@
                               <Insets left="10.0" top="8.0" />
                            </HBox.margin>
                         </CheckBox>
-                        <CheckBox fx:id="doneBox" mnemonicParsing="false" onAction="#checkBoxHandles" text="Đã thu">
+                        <CheckBox fx:id="doneBox" mnemonicParsing="false" onAction="#checkBoxHandles" text="Đã xếp">
                            <HBox.margin>
                               <Insets left="10.0" top="8.0" />
                            </HBox.margin>
                         </CheckBox>
-                        <CheckBox fx:id="unDoneBox" mnemonicParsing="false" onAction="#checkBoxHandles" text="Chưa thu">
+                        <CheckBox fx:id="unDoneBox" mnemonicParsing="false" onAction="#checkBoxHandles" text="Chưa xếp">
                            <HBox.margin>
                               <Insets left="10.0" top="8.0" />
                            </HBox.margin>
                         </CheckBox>
+                        <Button fx:id="showAllBtn" mnemonicParsing="false" onAction="#showAll" styleClass="buttonindashboard" text="Hiển thị tất cả" visible="false">
+                           <padding>
+                              <Insets bottom="5.0" left="30.0" right="30.0" top="5.0" />
+                           </padding>
+                           <font>
+                              <Font name="Segoe UI" size="12.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                        </Button>
                      </children>
                      <VBox.margin>
                         <Insets />
