--- a/src/main/resources/View/studentPane.fxml
+++ b/src/main/resources/View/studentPane.fxml
@@ -26,12 +26,12 @@
                <children>
                   <HBox prefHeight="45.0" prefWidth="1000.0">
                      <children>
-                        <TextField fx:id="searchText" onKeyReleased="#textChange" prefHeight="44.0" prefWidth="500.0" promptText="Tìm kiếm">
+                        <TextField fx:id="searchText" onKeyReleased="#textChange" prefHeight="45.0" prefWidth="500.0" promptText="Tìm kiếm" styleClass="searchField">
                            <HBox.margin>
                               <Insets />
                            </HBox.margin>
                         </TextField>
-                        <Button mnemonicParsing="false" prefHeight="40.0" styleClass="appBtn" text="Thêm Mới" textFill="WHITE">
+                        <Button mnemonicParsing="false" prefHeight="40.0" styleClass="buttonindashboard" text="Thêm Mới" textFill="WHITE">
                            <padding>
                               <Insets bottom="8.0" left="24.0" right="24.0" top="8.0" />
                            </padding>
@@ -73,7 +73,7 @@
                               <Font name="Segoe UI" size="12.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="10.0" top="8.0" />
+                              <Insets bottom="8.0" left="10.0" top="8.0" />
                            </HBox.margin>
                         </CheckBox>
                         <CheckBox fx:id="doneBox" mnemonicParsing="false" onAction="#checkBoxHandles" text="Đã xếp">
@@ -94,7 +94,7 @@
                               <Font name="Segoe UI" size="12.0" />
                            </font>
                            <HBox.margin>
-                              <Insets left="10.0" />
+                              <Insets left="16.0" top="4.0" />
                            </HBox.margin>
                         </Button>
                      </children>
