--- a/src/main/resources/View/editRoomPane.fxml
+++ b/src/main/resources/View/editRoomPane.fxml
@@ -3,19 +3,21 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="420.0" prefWidth="400.0" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.DetailRoomPaneController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="500.0" styleClass="casualPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.dormmanagement.EditRoomPaneController">
     <stylesheets>
         <URL value="@/styles/main.css" />
     </stylesheets>
-   <children>
-      <VBox layoutX="105.0" layoutY="51.0" prefHeight="420.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <children>
+      <VBox layoutX="105.0" layoutY="51.0" prefHeight="400.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox layoutX="10.0" layoutY="10.0" prefWidth="200.0">
                <children>
@@ -27,12 +29,12 @@
                         <Insets left="50.0" />
                      </HBox.margin>
                   </Label>
-                  <Label fx:id="apartmentLable" text="Label">
+                  <Label fx:id="apartmentLabel" text="Label">
                      <font>
                         <Font name="Segoe UI" size="18.0" />
                      </font>
                      <HBox.margin>
-                        <Insets left="150.0" />
+                        <Insets left="128.0" />
                      </HBox.margin>
                   </Label>
                </children>
@@ -50,12 +52,12 @@
                         <Insets left="50.0" />
                      </HBox.margin>
                   </Label>
-                  <Label fx:id="roomLable" text="Label">
+                  <Label fx:id="roomLabel" text="Label">
                      <font>
                         <Font name="Segoe UI" size="18.0" />
                      </font>
                      <HBox.margin>
-                        <Insets left="128.0" />
+                        <Insets left="105.0" />
                      </HBox.margin>
                   </Label>
                </children>
@@ -63,7 +65,7 @@
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
-            <HBox layoutX="10.0" layoutY="56.0" prefWidth="200.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="56.0" prefWidth="200.0">
                <children>
                   <Label text="Số lượng đã ở">
                      <font>
@@ -73,22 +75,22 @@
                         <Insets left="50.0" />
                      </HBox.margin>
                   </Label>
-                  <Label fx:id="nostudentLable" text="Label">
+                  <TextField fx:id="nostudentText" prefWidth="200.0" styleClass="textField2">
+                     <HBox.margin>
+                        <Insets left="40.0" />
+                     </HBox.margin>
                      <font>
                         <Font name="Segoe UI" size="18.0" />
                      </font>
-                     <HBox.margin>
-                        <Insets left="64.0" />
-                     </HBox.margin>
-                  </Label>
+                  </TextField>
                </children>
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
-            <HBox layoutX="10.0" layoutY="125.0" prefWidth="200.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="102.0" prefWidth="200.0">
                <children>
-                  <Label fx:id="eNum" text="Trạng thái">
+                  <Label text="Trạng thái">
                      <font>
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
@@ -101,7 +103,7 @@
                         <Font name="Segoe UI" size="18.0" />
                      </font>
                      <HBox.margin>
-                        <Insets left="95.0" />
+                        <Insets left="72.0" />
                      </HBox.margin>
                   </Label>
                </children>
@@ -109,7 +111,7 @@
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
-            <HBox layoutX="10.0" layoutY="148.0" prefWidth="200.0">
+            <HBox layoutX="10.0" layoutY="148.0" prefHeight="36.0" prefWidth="500.0">
                <children>
                   <Label text="Loại phòng">
                      <font>
@@ -119,20 +121,17 @@
                         <Insets left="50.0" />
                      </HBox.margin>
                   </Label>
-                  <Label fx:id="typeLable" text="Label">
-                     <font>
-                        <Font name="Segoe UI" size="18.0" />
-                     </font>
+                  <ComboBox fx:id="typeCombobox" prefWidth="200.0" visibleRowCount="18">
                      <HBox.margin>
-                        <Insets left="88.0" />
+                        <Insets left="64.0" />
                      </HBox.margin>
-                  </Label>
+                  </ComboBox>
                </children>
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
-            <HBox layoutX="10.0" layoutY="171.0" prefWidth="200.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="171.0" prefWidth="200.0">
                <children>
                   <Label text="Giá thuê">
                      <font>
@@ -142,21 +141,21 @@
                         <Insets left="50.0" />
                      </HBox.margin>
                   </Label>
-                  <Label fx:id="rentingpriceLable" text="Label">
+                  <TextField fx:id="rentingpriceText" prefWidth="200.0" styleClass="textField2">
+                     <HBox.margin>
+                        <Insets left="88.0" />
+                     </HBox.margin>
                      <font>
                         <Font name="Segoe UI" size="18.0" />
                      </font>
-                     <HBox.margin>
-                        <Insets left="112.0" />
-                     </HBox.margin>
-                  </Label>
+                  </TextField>
                </children>
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
-            <BorderPane prefHeight="100.0" prefWidth="200.0">
-               <center>
+            <BorderPane prefHeight="200.0" prefWidth="200.0">
+               <left>
                   <Button mnemonicParsing="false" onAction="#backbtn" styleClass="appBtn-red" text="Quay lại" BorderPane.alignment="CENTER">
                      <font>
                         <Font name="Segoe UI Bold" size="18.0" />
@@ -164,8 +163,24 @@
                      <padding>
                         <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
                      </padding>
+                     <BorderPane.margin>
+                        <Insets left="60.0" />
+                     </BorderPane.margin>
                   </Button>
-               </center>
+               </left>
+               <right>
+                  <Button mnemonicParsing="false" prefWidth="100.0" styleClass="appBtn-green" text="Lưu" BorderPane.alignment="CENTER">
+                     <font>
+                        <Font name="Segoe UI Bold" size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets bottom="10.0" top="10.0" />
+                     </padding>
+                     <BorderPane.margin>
+                        <Insets right="60.0" />
+                     </BorderPane.margin>
+                  </Button>
+               </right>
             </BorderPane>
          </children>
       </VBox>
