--- a/src/main/resources/View/studentPane.fxml
+++ b/src/main/resources/View/studentPane.fxml
@@ -31,7 +31,7 @@
                               <Insets />
                            </HBox.margin>
                         </TextField>
-                        <Button mnemonicParsing="false" prefHeight="40.0" styleClass="buttonindashboard" text="Thêm Mới" textFill="WHITE">
+                        <Button mnemonicParsing="false" onAction="#addHandleClicked" prefHeight="40.0" styleClass="buttonindashboard" text="Thêm Mới" textFill="WHITE">
                            <padding>
                               <Insets bottom="8.0" left="24.0" right="24.0" top="8.0" />
                            </padding>
