--- a/src/main/resources/View/accountPane.fxml
+++ b/src/main/resources/View/accountPane.fxml
@@ -221,15 +221,30 @@
                         <Font name="Segoe UI" size="12.0" />
                      </font>
                   </Label>
-                  <Button fx:id="addBtn" disable="true" mnemonicParsing="false" onAction="#addEmployee" prefHeight="45.0" prefWidth="150.0" styleClass="buttonindashboard" text="Thêm Mới" textFill="WHITE">
-
-                     <padding>
-                        <Insets bottom="10.0" left="24.0" right="24.0" top="10.0" />
-                     </padding>
-                     <font>
-                        <Font name="Segoe UI Bold" size="18.0" />
-                     </font>
-                  </Button>
+                  <HBox>
+                     <children>
+                        <Button fx:id="addBtn1" mnemonicParsing="false" onAction="#clearText" prefHeight="45.0" prefWidth="150.0" styleClass="appBtn-red" text="Nhập lại" textFill="WHITE">
+                           <padding>
+                              <Insets bottom="10.0" left="24.0" right="24.0" top="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="Segoe UI Bold" size="18.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets right="20.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="addBtn" disable="true" mnemonicParsing="false" onAction="#addEmployee" prefHeight="45.0" prefWidth="150.0" styleClass="buttonindashboard" text="Thêm Mới" textFill="WHITE">
+      
+                                 <padding>
+                              <Insets bottom="10.0" left="24.0" right="24.0" top="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="Segoe UI Bold" size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
          </right>
