--- a/src/main/resources/View/apartmentPane.fxml
+++ b/src/main/resources/View/apartmentPane.fxml
@@ -152,10 +152,10 @@
                            <font>
                               <Font name="Segoe UI Bold" size="14.0" />
                            </font></Label>
-                        <ComboBox fx:id="employeeCombobox" onAction="#valueChange"  prefHeight="45.0" prefWidth="200.0" styleClass="combobox" />
+                        <ComboBox fx:id="employeeCombobox" onAction="#valueChange" prefHeight="45.0" prefWidth="200.0" styleClass="combobox" />
                      </children>
                      <VBox.margin>
-                        <Insets bottom="30.0" />
+                        <Insets bottom="20.0" />
                      </VBox.margin>
                   </HBox>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0">
@@ -167,16 +167,34 @@
                         </Label>
                         <TextField fx:id="name" disable="true" prefHeight="45.0" prefWidth="200.0" styleClass="textField2" />
                      </children>
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
                   </HBox>
-                  <Button mnemonicParsing="false" onAction="#addApartment" prefHeight="45.0" prefWidth="150.0" styleClass="buttonindashboard" text="Thêm Mới" textFill="WHITE">
-
-                     <padding>
-                        <Insets bottom="10.0" left="24.0" right="24.0" top="10.0" />
-                     </padding>
-                     <font>
-                        <Font name="Segoe UI Bold" size="18.0" />
-                     </font>
-                  </Button>
+                  <HBox>
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#clearText" prefHeight="45.0" prefWidth="150.0" styleClass="appBtn-red" text="Nhập lại" textFill="WHITE">
+                           <padding>
+                              <Insets bottom="10.0" left="24.0" right="24.0" top="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="Segoe UI Bold" size="18.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#addApartment" prefHeight="45.0" prefWidth="150.0" styleClass="buttonindashboard" text="Thêm Mới" textFill="WHITE">
+      
+                           <padding>
+                              <Insets bottom="10.0" left="24.0" right="24.0" top="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="Segoe UI Bold" size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
          </right>
