--- a/src/main/resources/View/detailStudent.fxml
+++ b/src/main/resources/View/detailStudent.fxml
@@ -319,7 +319,7 @@
          <left>
             <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <ImageView fitHeight="173.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="image" fitHeight="225.0" fitWidth="175.0" pickOnBounds="true" preserveRatio="true">
                      <VBox.margin>
                         <Insets left="10.0" right="10.0" top="30.0" />
                      </VBox.margin>
