--- a/src/main/resources/View/editStudent.fxml
+++ b/src/main/resources/View/editStudent.fxml
@@ -211,7 +211,7 @@
                                     <Insets left="67.0" right="35.0" />
                                  </HBox.margin>
                               </Label>
-                              <TextField fx:id="idRoomText" prefHeight="35.0" prefWidth="250.0" styleClass="textField2" />
+                              <TextField fx:id="idRoomText" disable="true" editable="false" prefHeight="35.0" prefWidth="250.0" styleClass="textField2" />
                            </children>
                            <VBox.margin>
                               <Insets top="20.0" />
@@ -253,11 +253,22 @@
          <left>
             <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <ImageView fitHeight="173.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="image" fitHeight="225.0" fitWidth="175.0" pickOnBounds="true" preserveRatio="true">
                      <VBox.margin>
                         <Insets left="10.0" right="10.0" top="30.0" />
                      </VBox.margin>
                   </ImageView>
+                  <Button fx:id="addImageBtn" mnemonicParsing="false" onAction="#handleAddImage" prefWidth="131.0" styleClass="appBtn-green" text="Thêm ảnh">
+                     <font>
+                        <Font name="Segoe UI Bold" size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets bottom="10.0" top="10.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets left="30.0" top="15.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
             </VBox>
          </left>
